--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.2",
     "@edgestore/react": "^0.1.4",
     "@edgestore/server": "^0.1.4",
     "next": "13.5.4",
