--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.2",
-    "@edgestore/react": "^0.1.4",
-    "@edgestore/server": "^0.1.4",
+    "@edgestore/react": "^0.1.5-alpha.3",
+    "@edgestore/server": "^0.1.5-alpha.3",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
